2009-03-08  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/pygio-classes.xml:
	* docs/reference/pygobject-ref.xml:
	* docs/reference/pygio-applaunchcontext.xml:
	* docs/reference/pygio-cancellable.xml: Add few gio classes.

2009-03-08  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs: add g_cancellable_make_pollfd

2009-03-08  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/pyglib-classes.xml
	* docs/reference/pygobject-ref.xml
	* docs/reference/pygobject-classes.xml: Split glib and gobject
	doc sections.

2009-02-20  James Henstridge  <james@jamesh.id.au>

	* ltihooks.py: pull in changes from pygtk (updating license header
	from GPL to LGPL).

2009-02-18  Andre Klapper  <a9016009@gmx.de>

	* gobject/pygobject.h:
	Change comment to avoid false positives when grep'ing for 
	deprecated gtk functions

2009-02-17  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* gio/gfile.override, gio/gio.defs, gio/gio.override: Bug 556250
	again.  I screwed up and gave misinformation about how to fix it.
	It must be pyg_begin/end_allow_threads, pyg_block/unblock_threads
	is only to be used for async callbacks.

2009-02-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 556250 – non-async functions don't release python locks before
	calling blocking C functions

	* gio/gio.override:
	* gio/gfile.override:
	* gio/gio.defs: release the thread lock.

2009-02-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs:
	* gio/gio-types.defs:
	* gio/unix.defs: Add 2.18 gio API.

2009-02-08  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 568427 – "gio.Error: Too many open files" without too many
	open files
	
	* gobject/pygtype.c (_wrap_g_type_wrapper__get_name):
	* gobject/gobjectmodule.c (get_type_name_for_class):
	* gobject/pygobject.c (build_parameter_list), (PyGProps_length):
	* gio/gfileinfo.override (_wrap_g_file_info_list_attributes):
	* gio/gio.override (_wrap_g_content_type_guess):